# borgdash

./: .dockerignore  .gitignore  Dockerfile  README.md  pixi.toml
dashboard/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pixi.toml  stub.sh
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/api/config/: route.tsx
dashboard/src/app/api/crontab/: route.tsx
dashboard/src/app/api/readlog/: route.tsx
dashboard/src/app/api/reload/: route.tsx
dashboard/src/app/api/rescan/: route.tsx
dashboard/src/app/crontab/: page.tsx
dashboard/src/app/logs/: page.tsx
dashboard/src/app/logs/[...logs]/: page.tsx
dashboard/src/app/reporterconfig/: page.tsx
dashboard/src/app/repos/: page.tsx
dashboard/src/app/repos/[...repo]/: page.tsx
dashboard/src/app/repos/[repo]/: page.tsx
dashboard/src/components/: config_editor.tsx  crontab_editor.tsx  dashboard_layout.tsx  log_details.tsx  mode_switch.tsx  repo_card.tsx  repo_details.tsx  reporter.tsx  repos_graphs.tsx  sidebar_footer.tsx  toolbar_actions.tsx
dashboard/src/lib/: config.ts  crontab.ts  font.ts  logfs.ts  report.ts  rescan.ts  theme.ts  utils.ts
etc/: config.dev.yaml  config.dev.yaml.bkup  config.yaml  config_default.yaml  config_dev.example.yaml  config_dev.yaml  config_docker.yaml  startup.sh
etc/docker_example/config/: config_docker.example.yaml  config_docker.yaml
etc/ssh_docker/: id_ed25519  id_ed25519.pub  known_hosts  known_hosts.old
reporter/: pixi.toml  pyproject.toml
reporter/src/borgdash_reporter/: borg.py  cli.py  config.py  exceptions.py  logfs.py  notifier.py  repo.py  reporter.py
reporter/src/borgdash_reporter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
