[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "borgdash-reporter"
authors = [{ name = "Vivien Chene", email = "viv@vivc.org" }]
description = "Borg backup report generation"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "tool", "borg"]
# license = {text = "BSD-3-Clause"}
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "pyaml",
  #     'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
borgdash-reporter = "borgdash_reporter.cli:main"

[tool.setuptools.dynamic]
version = { attr = "borgdash_reporter.version.__version__" }

[tool.pyright]
venvPath = ".pixi/envs/"
venv = "default"

[[tool.mypy.overrides]]
module = ["borgdash_reporter.*"]
ignore_missing_imports = true
